[package]
name = "burn-rs-io-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.16.0" }
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
statrs = "0.18.0"
bytesize = "2.0.0"
clap = { version = "4.5.31", features = ["derive"] }

[features]
default = ["wgpu"]
wgpu = ["burn/wgpu"]
cuda-jit = ["burn/cuda-jit"]
